--- a/abcApplication/src/main/resources/application.properties
+++ b/abcApplication/src/main/resources/application.properties
@@ -1,14 +1,23 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/mtitdb1?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password =
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-server.port=1010
+spring.product.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.product.datasource.jdbcUrl=jdbc:mysql://localhost:3306/mtitdb1?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.product.datasource.username = root
+spring.product.datasource.password =
+#spring.product.jpa.show-sql = true
+#spring.product.jpa.hibernate.ddl-auto = update
+#spring.product.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 
-spring.datasource2.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource2.url = jdbc:mysql://localhost:3306/mtitdb2?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource2.username = root
-spring.datasource2.password =
+spring.customer.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.customer.datasource.jdbcUrl=jdbc:mysql://localhost:3306/mtitdb2?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.customer.datasource.username = root
+spring.customer.datasource.password =
+#spring.customer.jpa.show-sql = true
+#spring.customer.jpa.hibernate.ddl-auto = update
+#spring.customer.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.database=default
+
+spring.main.allow-bean-definition-overriding=true
+#server.customer.port=1010
+#spring.product.datasource.url = jdbc:mysql://localhost:3306/mtitdb1?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
