--- a/abcApplication/pom.xml
+++ b/abcApplication/pom.xml
@@ -59,6 +59,15 @@
 			<artifactId>spring-boot</artifactId>
 			<version>2.2.6.RELEASE</version>
 		</dependency>
+
+		<!-- Swagger
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2-SNAPSHOT</version>
+		</dependency>
+
+	===================== -->
 	</dependencies>
 
 	<build>
