--- a/abcApplication/pom.xml
+++ b/abcApplication/pom.xml
@@ -60,14 +60,20 @@
 			<version>2.2.6.RELEASE</version>
 		</dependency>
 
-		<!-- Swagger
+		<!-- Swagger -->
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
-			<version>2.9.2-SNAPSHOT</version>
+			<version>2.9.2</version>
 		</dependency>
 
-	===================== -->
+		<dependency>
+			<groupId>io.springfox.ui</groupId>
+			<artifactId>springfox-swagger-ui-rfc6570</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
